PG: update PGPool to detect map gaps and reset cached_removed_snaps

Fixes: http://tracker.ceph.com/issues/15943
Signed-off-by: Samuel Just <sjust@redhat.com>